fix layout bug css

--- a/app/javascript/stylesheets/header.scss
+++ b/app/javascript/stylesheets/header.scss
@@ -12,7 +12,7 @@
   left: 0;
   right: 0;
   background-color: white;
-  z-index: 1;
+  z-index: 200;
 
   @media (max-width: 924px) {
     padding: 0 15px;
