--- a/app/javascript/stylesheets/index.scss
+++ b/app/javascript/stylesheets/index.scss
@@ -29,8 +29,6 @@
   height: fit-content;
   flex-direction: column;
   display: flex;
-  position: sticky;
-  top: calc(56px + 8px);
   a {
     width: 100%;
     img {
